@@ -9,6 +9,11 @@
 
  Changes between 1.1.1 and 1.1.2 [xx XXX xxxx]
 
+  *) Remove the 'dist' target and add a tarball building script.  The
+     'dist' target has fallen out of use, and it shouldn't be
+     necessary to configure just to create a source distribution.
+     [Richard Levitte]
+
   *) Recreate the OS390-Unix config target.  It no longer relies on a
      special script like it did for OpenSSL pre-1.1.0.
      [Richard Levitte]
